# voting

./: .env  Cargo.toml  Makefile  README.md  configure.sh  diesel.toml  docker-compose.yaml  voting.http
backend/: Cargo.toml  Dockerfile  configure.sh
backend/migrations/2021-02-10-224200_create_votings/: down.sql  up.sql
backend/src/: actions.rs  dtos.rs  main.rs  models.rs  pool.rs  schema.rs  utils.rs  validators.rs
backend/src/actions/: find.rs  insert.rs
backend/src/dtos/: create_voter_dto.rs  create_voting_dto.rs  get_active_poll_dto.rs  get_voter_info_dto.rs
backend/src/routes/: poll.rs  vote.rs  voter.rs  voting.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  rollup.config.js
frontend/public/: global.css  index.html
frontend/src/: App.svelte  CopyClipBoard.svelte  api.ts  location.ts
frontend/src/routes/: Home.svelte  NotFound.svelte  VotingAdmin.svelte  VotingVoter.svelte
migrations/2021-02-10-224200_create_votings/: down.sql  up.sql
scripts/: docker_compose.sh
src/: actions.rs  asdfasd.rsold  dtos.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  schema_custom.rs  utils.rs  validators.rs
src/actions/: check.rs  find.rs  get.rs  insert.rs  update.rs
src/dtos/: get_active_poll_dto.rs  get_voter_info_dto.rs  get_voting_dto.rs  set_active_poll_dto.rs  set_vote_dto.rs
src/routes/: poll.rs  vote.rs  voter.rs  voting.rs
test/: voting.http
