[package]
name = "voting"
version = "0.1.0"
authors = ["SirCremefresh <donato.wolfisberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.10"

#rocket = "0.4.7"
#rocket_contrib = "0.4.7"
#
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"