[package]
name = "voting"
version = "0.1.0"
authors = ["SirCremefresh <donato.wolfisberg@gmail.com>", "sirh3e <marvin.huber@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.10"

log = "0.4.0"
env_logger = "0.8.3"
chrono = "0.4.19"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

rocket = "0.4.7"
rocket_contrib = "0.4.10"

serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"

uuid = { version = "0.8", features = ["serde", "v4"] }

sha2 = "0.9.3"

diesel = { version = "1.4.5", features = ["postgres"] }
diesel_migrations = "1.3.0"
